--- a/Friday.ERP.Client/Pages/Inventory/Components/Templates/ProductPage.razor
+++ b/Friday.ERP.Client/Pages/Inventory/Components/Templates/ProductPage.razor
@@ -6,6 +6,7 @@
         <MudText Typo="Typo.h6">Purchases</MudText>
     </MudItem>
     <MudItem sm="12" md="3" Class="align-self-center">
+        @* Todo *@
         <MudAutocomplete T="string?"
                          Label="Category"
                          Clearable="true"
