--- a/Friday.ERP.Client/Pages/Purchase/Dialogs/PurchaseTransactionDialog.razor
+++ b/Friday.ERP.Client/Pages/Purchase/Dialogs/PurchaseTransactionDialog.razor
@@ -14,6 +14,7 @@
         <MudDivider DividerType="DividerType.FullWidth" Class="my-4"></MudDivider>
         <MudGrid Spacing="2">
             <CustomLabelAndLabel FirstText="Subtotal" SecondText="@($"{SubTotal.ToString()} mmk")"></CustomLabelAndLabel>
+            @* Todo *@
             <CustomLabelAndInput FirstText="Discount">
                 <MudItem sm="3" md="3" lg="3" Class="align-self-center">
                     <MudSelect T="string"
